Attempted to fix page-break printout problem on Safari

--- a/css/index.css
+++ b/css/index.css
@@ -1130,15 +1130,15 @@ section {
     }
 
     .break-inside--avoid {
-        page-break-inside: avoid;
+        break-inside: avoid;
         display: inline-table; /* Make element unbreakable for Safari */
     }
 
     .card {
         box-shadow: none;
-        page-break-inside: avoid;
+        break-inside: avoid;
         display: inline-table; /* Make element unbreakable for Safari */
-        border: 1px solid black;
+        box-shadow: var(--box-shadow-tiny-light-mode);
     }
 
     .card:hover {
